# axum-reverse-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  check.sh
.config/: nextest.toml
.github/workflows/: bench.yml  benchmark.yml  ci.yml  publish.yml
benches/: proxy_bench.rs  websocket_bench.rs
benchmarks/: README.md  benchmark.yml  deploy.sh  run-benchmark.sh  run-comprehensive-benchmark.sh
benchmarks/docker/backend/: Cargo.toml  Dockerfile
benchmarks/docker/backend/src/: main.rs
benchmarks/k8s/: 00-base.yaml  01-axum-proxy.yaml  02-nginx-proxy.yaml  03-load-tester.yaml  Dockerfile.axum
benchmarks/scripts/: generate_plots.py
examples/: balanced.rs  basic.rs  benchmark_proxy.rs  dangerous_client.rs  discoverable.rs  dns_discovery.rs  load_balancing_strategies.rs  nested.rs  retry.rs  rfc9110_compliance.rs  tower_middleware.rs
src/: balanced_proxy.rs  body.rs  danger.rs  dns_discovery.rs  lib.rs  proxy.rs  retry.rs  rfc9110.rs  router.rs  websocket.rs
tests/: badssl_integration_test.rs  balanced.rs  basic.rs  dangerous_client_test.rs  discoverable_integration_test.rs  discoverable_proxy_test.rs  discoverable_router.rs  dns_discovery_integration.rs  errors.rs  headers.rs  middleware.rs  proxy_tests.rs  retry.rs  rfc9110.rs  routing.rs  service.rs  streaming.rs  websocket.rs
