[package]
name = "axum-reverse-proxy"
version = "0.4.1"
edition = "2021"
description = "A flexible and efficient reverse proxy implementation for Axum web applications"
license = "MIT"
repository = "https://github.com/tom-lubenow/axum-reverse-proxy"
documentation = "https://docs.rs/axum-reverse-proxy"
readme = "README.md"
keywords = ["axum", "proxy", "reverse-proxy", "http", "web"]
categories = ["web-programming::http-server", "network-programming"]
authors = ["Tom Lubenow"]

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
base64 = "0.22.1"
bytes = "1.9.0"
futures-util = "0.3.31"
http = "1.2.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
sha1 = "0.10.6"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tower = { version = "0.5.2", features = ["full"] }
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "futures"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full", "test-util"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bench]]
name = "proxy_bench"
harness = false

[[bench]]
name = "websocket_bench"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "nested"
path = "examples/nested.rs"

[[example]]
name = "tower_middleware"
path = "examples/tower_middleware.rs"
