[package]
name = "axum-reverse-proxy"
version = "1.0.3"
edition = "2024"
description = "A flexible and efficient reverse proxy implementation for Axum web applications"
license = "MIT"
repository = "https://github.com/tom-lubenow/axum-reverse-proxy"
documentation = "https://docs.rs/axum-reverse-proxy"
readme = "README.md"
keywords = ["axum", "proxy", "reverse-proxy", "http", "web"]
categories = ["web-programming::http-server", "network-programming"]
authors = ["Tom Lubenow"]

[dependencies]
axum = { version = "^0.8", features = ["ws"] }
base64 = "^0.21"
bytes = "^1.5"
futures-util = "^0.3"
http = "^1.0"
http-body-util = "^0.1"
http-body = "^1.0"
hyper = { version = "^1.0", features = ["full"] }
hyper-rustls = { version = "^0.27", optional = true }
hyper-tls = { version = "^0.6", optional = true }
hyper-util = { version = "^0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
native-tls = { version = "^0.2", optional = true }
rustls = { version = "^0.23", optional = true }
sha1 = "^0.10"
tokio = { version = "^1.45", features = ["full"] }
tokio-native-tls = { version = "^0.3", optional = true }
tokio-tungstenite = { version = "^0.27", features = ["rustls-tls-webpki-roots"] }
tower = { version = "^0.5", features = ["full"] }
tracing = "^0.1"
url = "^2.5"
hickory-resolver = { version = "0.25.2", optional = true }
rand = "0.9.1"

[dev-dependencies]
async-stream = "^0.3"
criterion = { version = "^0.5", features = ["async", "futures"] }
rcgen = "^0.13"
reqwest = { version = "^0.11", features = ["json"] }
serde_json = "^1.0"
tokio = { version = "^1.45", features = ["full", "test-util"] }
tokio-rustls = "^0.26"
tower-http = { version = "^0.6", features = ["full"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[features]
default = ["tls"]
tls = ["hyper-rustls", "rustls"]
native-tls = ["hyper-tls", "dep:native-tls", "tokio-native-tls"]
dns = ["hickory-resolver"]
full = ["tls", "dns"]

[[bench]]
name = "proxy_bench"
harness = false

[[bench]]
name = "websocket_bench"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["tls"]

[[example]]
name = "nested"
path = "examples/nested.rs"
required-features = ["tls"]

[[example]]
name = "tower_middleware"
path = "examples/tower_middleware.rs"
required-features = ["tls"]

[[example]]
name = "retry"
path = "examples/retry.rs"
required-features = ["tls"]

[[example]]
name = "balanced"
path = "examples/balanced.rs"
required-features = ["tls"]

[[example]]
name = "discoverable"
path = "examples/discoverable.rs"
required-features = ["tls"]

[[example]]
name = "load_balancing_strategies"
path = "examples/load_balancing_strategies.rs"
required-features = ["tls"]

[[example]]
name = "dns_discovery"
path = "examples/dns_discovery.rs"
required-features = ["tls", "dns"]

[[example]]
name = "dangerous_client"
path = "examples/dangerous_client.rs"
required-features = ["tls"]
